bundled_metadata/force-app/main/default/objects/OrderItem/fields/Number_of_units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_units__c</fullName>
    <label>Number of units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>