bundled_metadata/force-app/main/default/objects/OrderItem/fields/Product_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>Product_ExternalId__c</fullName>
    <description>External ID for the product. For transfer orders, this is populated from StoreProduct.Wholesaler_Product_Id__c. For non-transfer orders, populated based on order type.</description>
    <label>Product External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>