bundled_metadata/force-app/main/default/objects/OrderItem/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <formula>IF(
  ISBLANK(Confirmed_Quantity__c),
  Quantity * Customer_Price__c,
  Confirmed_Quantity__c * Customer_Price__c
)</formula>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>