bundled_metadata/force-app/main/default/objects/OrderItem/fields/Total_Price_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Amount__c</fullName>
    <formula>CASE(
    Order.Account.Market__c,
    &quot;GB&quot;, &quot;GBP&quot;,
    &quot;RO&quot;, &quot;RON&quot;,
    &quot;PL&quot;, &quot;PLN&quot;,
    &quot;UA&quot;, &quot;UAH&quot;,
    &quot;RS&quot;, &quot;RSD&quot;,
    &quot;BA&quot;, &quot;BAM&quot;,
    &quot;EUR&quot;
)
&amp; &quot; &quot; &amp;
TEXT( Quantity * UnitPrice )
&amp; &quot; &quot; &amp;
CASE(
    Order.Account.Market__c,
    &quot;GB&quot;, &quot;£&quot;,
    &quot;RO&quot;, &quot;lei&quot;,
    &quot;PL&quot;, &quot;zł&quot;,
    &quot;UA&quot;, &quot;₴&quot;,
    &quot;RS&quot;, &quot;дин.&quot;,
    &quot;BA&quot;, &quot;KM&quot;,
    &quot;€&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price Amount</label>
    <type>Text</type>
</CustomField>