bundled_metadata/force-app/main/default/objects/OrderItem/fields/UoM__c.field-meta.xml
<CustomField>
    <fullName>UoM__c</fullName>
    <description>Unit of Measure selected when adding the product to the order in SAVVY</description>
    <label>UoM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eaches</fullName>
            </value>
            <value>
                <fullName>Cases</fullName>
            </value>
            <value>
                <fullName>Pallets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>