bundled_metadata/force-app/main/default/objects/OrderItem/fields/Wholesaler_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Product_Id__c</fullName>
    <description>The Wholesaler&apos;s SKU code for this product. Copied from StoreProduct.Wholesaler_Product_Id__c when the product is added to the order.</description>
    <inlineHelpText>The Wholesaler&apos;s unique SKU code for this product.</inlineHelpText>
    <label>Wholesaler Product Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>